avip-ahb.log
# AHB AVIP Forward Declaration Analysis - Iteration 202

## Summary

The AHB AVIP compilation failure is NOT due to forward declarations, but rather due to
**incorrect bind scope semantics** in the source code.

## Root Cause

The bind statements in `AhbMasterAgentBFM.sv` and `AhbSlaveAgentBFM.sv` incorrectly
reference `ahbInterface` (a port of the parent module) in bind port connection expressions:

**Current (incorrect) - Line 64 of AhbMasterAgentBFM.sv:**
```systemverilog
bind AhbMasterMonitorBFM AhbMasterAssertion ahb_assert (.hclk(ahbInterface.hclk),
                                                       .hresetn(ahbInterface.hresetn),
                                                       ...);
```

Per IEEE 1800 SystemVerilog LRM Section 23.11, port connection expressions in bind
statements are resolved in the **target scope** (AhbMasterMonitorBFM), not the
enclosing scope (AhbMasterAgentBFM).

Since `ahbInterface` is a port of `AhbMasterAgentBFM`, it is not visible in
`AhbMasterMonitorBFM`'s scope, causing the "use of undeclared identifier" error.

## Error Messages

```
../mbit/ahb_avip/src/hdlTop/masterAgentBFM/AhbMasterAgentBFM.sv:64:66: error: use of undeclared identifier 'ahbInterface'
   bind AhbMasterMonitorBFM AhbMasterAssertion ahb_assert (.hclk(ahbInterface.hclk),
                                                                 ^
```

## Classification

**This is a genuine SystemVerilog violation, not a slang strictness issue.**

The IEEE 1800 LRM specifies that bind port expressions are resolved in the target scope.
Slang correctly implements this behavior. VCS/Xcelium may accept this pattern due to
relaxed checking or different scope resolution order, but the code as written is
technically non-compliant with the standard.

## Correct Fix

The bind statements should reference signals that exist in the target scope. Since
`AhbMasterMonitorBFM` has ports with names like `hclk`, `hresetn`, `haddr`, etc.
(passed from the parent), the bind should use those names directly:

**Correct:**
```systemverilog
bind AhbMasterMonitorBFM AhbMasterAssertion ahb_assert (.hclk(hclk),
                                                       .hresetn(hresetn),
                                                       .hready(hready),
                                                       .haddr(haddr),
                                                       .htrans(htrans),
                                                       .hwrite(hwrite),
                                                       .hsize(hsize),
                                                       .hburst(hburst),
                                                       .hprot(hprot),
                                                       .hmaster(hmaster),
                                                       .hmastlock(hmastlock),
                                                       .hwdata(hwdata),
                                                       .hresp(hresp),
                                                       .hexcl(hexcl),
                                                       .hselx(hselx),
                                                       .hwstrb(hwstrb)
                                                      );
```

Or use SystemVerilog implicit port connections since signal names match:
```systemverilog
bind AhbMasterMonitorBFM AhbMasterAssertion ahb_assert (.*);
```

## Files Requiring Changes

1. `/home/thomas-ahle/mbit/ahb_avip/src/hdlTop/masterAgentBFM/AhbMasterAgentBFM.sv`
   - Lines 64-79: AhbMasterAssertion bind statement
   - Lines 82-101: AhbMasterCoverProperty bind statement

2. `/home/thomas-ahle/mbit/ahb_avip/src/hdlTop/slaveAgentBFM/AhbSlaveAgentBFM.sv`
   - Lines 67-82: AhbSlaveAssertion bind statement
   - Lines 83-102: AhbSlaveCoverProperty bind statement

## Verification

The corrected bind pattern compiles successfully with circt-verilog/slang.

## Evidence from slang Source

The slang test suite (HierarchyTests.cpp line 1363) explicitly checks that bind
type parameters resolve consistently between source and target scopes, confirming
that slang correctly distinguishes between these scopes:

```
source:16:21: error: bind type parameter 't' resolves to 'top.asdf' in source scope but 'm.asdf' in target scope
```

The ASTContext for bind instantiation is created with the target scope:
```cpp
// InstanceSymbols.cpp line 1131
ASTContext context(*this, LookupLocation::max);
```

## Original Error Log

```
../mbit/ahb_avip/src/hdlTop/masterAgentBFM/AhbMasterAgentBFM.sv:64:66: error: use of undeclared identifier 'ahbInterface'
   bind AhbMasterMonitorBFM AhbMasterAssertion ahb_assert (.hclk(ahbInterface.hclk),
                                                                 ^
../mbit/ahb_avip/src/hdlTop/masterAgentBFM/AhbMasterAgentBFM.sv:65:67: error: use of undeclared identifier 'ahbInterface'
                                                         .hresetn(ahbInterface.hresetn),
                                                                  ^
... (many similar errors for each port connection)
<unknown>:0: error: too many errors emitted, stopping now [--error-limit=]
```

## Conclusion

This is a source code bug in the AHB AVIP, not a slang/circt-verilog issue. The fix
requires modifying the AVIP source files to use correct bind scope semantics per
IEEE 1800.
